deployment/k8s/mlflow-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-minio
  namespace: pet-adoption
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-minio
  template:
    metadata:
      labels:
        app: mlflow-minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2024-01-16T16-07-38Z
          command: ["minio", "server", "/data", "--console-address", ":9001"]
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: mlflow-minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-minio
  namespace: pet-adoption
spec:
  selector:
    app: mlflow-minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
