deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-classifier-svc
  namespace: pet-adoption
spec:
  selector:
    app: pet-classifier
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
